# AkaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  akaeditor.cap
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
asset/shaders/: compile.bat  shader.frag  shader.vert
asset/shaders/debugdraw/: debug.vert
asset/shaders/editor/: basic.frag  basic.vert
asset/xpbd/: scene.sce
src/: Editor.cpp  Editor.h  json.hpp  main.cpp
src/Asset/: Asset.cpp  Asset.hpp  AssetLibrary.cpp  AssetLibrary.hpp  AssetPath.cpp  AssetPath.hpp
src/Asset/Archive/: Archive.cpp  Archive.hpp  ArchiveBatch.cpp  ArchiveBatch.hpp  ArchiveGeometry.cpp  ArchiveGeometry.hpp  ArchiveImage.cpp  ArchiveImage.hpp  ArchiveMaterial.cpp  ArchiveMaterial.hpp  ArchiveScene.cpp  ArchiveScene.hpp  ArchiveStaticMesh.cpp  ArchiveStaticMesh.hpp
src/Asset/Resource/: Font.hpp  Resource.cpp  Resource.hpp  Scene.cpp  Scene.hpp  StaticMesh.cpp  StaticMesh.hpp  Texture.cpp  Texture.hpp
src/Component/: CustomComponent.cpp  CustomComponent.hpp  RotatorComponent.cpp  RotatorComponent.hpp
src/Editor/: AssetBrowserEditorLayer.cpp  AssetBrowserEditorLayer.hpp  AssetEditorLayer.cpp  AssetEditorLayer.hpp  AssetViewer.cpp  AssetViewer.hpp  AssetViewerEditorLayer.cpp  AssetViewerEditorLayer.hpp  EditorLayer.cpp  EditorLayer.hpp  InfoEditorLayer.cpp  InfoEditorLayer.hpp  PerformanceEditorLayer.cpp  PerformanceEditorLayer.hpp  SceneEditorLayer.cpp  SceneEditorLayer.hpp
src/Editor/AssetViewer/: AssetViewer.cpp  AssetViewer.hpp  AssetViewerManager.cpp  AssetViewerManager.hpp  SceneViewer.cpp  SceneViewer.hpp  StaticMeshViewer.cpp  StaticMeshViewer.hpp  TextureViewer.cpp  TextureViewer.hpp
src/Editor/Modal/: FileModal.cpp  FileModal.hpp  ImportModal.cpp  ImportModal.hpp
src/Importer/: AssimpImporter.cpp  AssimpImporter.hpp  Importer.hpp
src/Renderer/: Renderer.hpp
